--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -4128,9 +4128,9 @@ AC_SUBST(CAP_LIBS)
 CFLAGS=${CFLAGS--O}
 
 if test x$have_gcc = xyes ; then
-   CPPFLAGS="$CPPFLAGS -fno-strict-aliasing -fno-exceptions"
-   CFLAGS="$CFLAGS -fno-strict-aliasing -fno-exceptions"
-   CXXFLAGS="$CFLAGS -fno-strict-aliasing -fno-exceptions -fno-rtti"
+   CPPFLAGS="$CPPFLAGS -fno-strict-aliasing"
+   CFLAGS="$CFLAGS -fno-strict-aliasing"
+   CXXFLAGS="$CFLAGS -fno-strict-aliasing -std=gnu++11"
 fi
 LDFLAGS=${LDFLAGS--O}
 CPPFLAGS="$CPPFLAGS"
