tls: started with kompatibility to 17

--- a/core/src/lib/CMakeLists.txt
+++ b/core/src/lib/CMakeLists.txt
@@ -91,6 +91,6 @@ IF(HAVE_WIN32)
 ENDIF()
 
 IF(NOT HAVE_WIN32 AND GTEST_FOUND)
-   add_subdirectory(unittests)
+#   add_subdirectory(unittests)
 ENDIF()
 
