--- a/debian/rules
+++ b/debian/rules
@@ -94,9 +94,11 @@ CONFIGURE_FULL        = $(CONFIGURE_COMMON) -Dpython=yes -Dbat=yes -Dtraymonitor
 override_dh_auto_configure:
 	@if [ "`lsb_release --short  --id`" = "Ubuntu" ] && [ "`lsb_release --short  --release`" = "8.04" ]; then \
 		echo "configure common configuration"; \
+		cd core \
 		dh_auto_configure -- $(CONFIGURE_COMMON); \
 	else \
 		echo "configure full configuration"; \
+		cd core \
 		dh_auto_configure -- $(CONFIGURE_FULL); \
 	fi
 
