--- a/debian/rules
+++ b/debian/rules
@@ -94,12 +94,10 @@ CONFIGURE_FULL        = $(CONFIGURE_COMMON) -Dpython=yes -Dbat=yes -Dtraymonitor
 override_dh_auto_configure:
 	@if [ "`lsb_release --short  --id`" = "Ubuntu" ] && [ "`lsb_release --short  --release`" = "8.04" ]; then \
 		echo "configure common configuration"; \
-		cd core \
-		dh_auto_configure -- $(CONFIGURE_COMMON); \
+		cd core; cmake $(CONFIGURE_COMMON); \
 	else \
 		echo "configure full configuration"; \
-		cd core \
-		dh_auto_configure -- $(CONFIGURE_FULL); \
+		cd core; cmake $(CONFIGURE_FULL); \
 	fi
 
 override_dh_fixperms:
