--- a/debian/rules
+++ b/debian/rules
@@ -94,10 +94,10 @@ CONFIGURE_FULL        = $(CONFIGURE_COMMON) -Dpython=yes -Dbat=yes -Dtraymonitor
 override_dh_auto_configure:
 	@if [ "`lsb_release --short  --id`" = "Ubuntu" ] && [ "`lsb_release --short  --release`" = "8.04" ]; then \
 		echo "configure common configuration"; \
-		cd core; cmake $(CONFIGURE_COMMON); make -j4 \
+		cd core; cmake $(CONFIGURE_COMMON); make -j4;\
 	else \
 		echo "configure full configuration"; \
-		cd core; cmake $(CONFIGURE_FULL); make -j4\
+		cd core; cmake $(CONFIGURE_FULL); make -j4;\
 	fi
 
 override_dh_fixperms:
@@ -114,7 +114,7 @@ override_dh_install:
 	chrpath -d $(CURDIR)/debian/tmp/usr/lib/bareos/backends/libbareoscats-mysql* \
 		$(CURDIR)/debian/tmp/usr/lib/bareos/backends/libbareoscats-postgresql* \
 		$(CURDIR)/debian/tmp/usr/lib/bareos/backends/libbareoscats-sqlite3*
-	cd core; make install
+	cd core; make install;
 
 override_dh_installinit:
 	dh_installinit --package=bareos-director   --name=bareos-dir --no-start
