--- a/webui/package.json
+++ b/webui/package.json
@@ -21,6 +21,9 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-plugin-pwa": "^3.0.4",
@@ -31,6 +34,7 @@
     "buefy": "^0.6.7",
     "bulma": "^0.7.1",
     "chai": "^4.1.2",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "nodemon": "^1.18.4",
     "sass-loader": "^7.0.1",
