--- a/web/webui/.editorconfig
+++ b/web/webui/.editorconfig
@@ -1,5 +1,25 @@
-[*.{js,jsx,ts,tsx,vue}]
+root = true
+
+[*]
+charset = utf-8
 indent_style = space
 indent_size = 2
-trim_trailing_whitespace = true
+continuation_indent_size = 2
+end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+# Standard at: https://github.com/felixge/node-style-guide
+[**.js]
+quote_type = single
+curly_bracket_next_line = false
+spaces_around_operators = true
+space_after_control_statements = true
+space_after_anonymous_functions = false
+spaces_in_brackets = false
+
+[**.json]
+quote_type = double
+curly_bracket_next_line = false
+spaces_around_operators = true
+spaces_in_brackets = false
