--- a/web/webui/package.json
+++ b/web/webui/package.json
@@ -9,10 +9,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "buefy": "^0.7.1",
     "bulma": "^0.7.2",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
