--- a/web/webui/package.json
+++ b/web/webui/package.json
@@ -9,16 +9,18 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "axios": "^0.18.0",
     "buefy": "^0.7.1",
     "bulma": "^0.7.2",
+    "lodash": "latest",
     "moment": "^2.22.2",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "lodash": "latest"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
