--- a/web/webui/package.json
+++ b/web/webui/package.json
@@ -17,6 +17,7 @@
     "lodash": "latest",
     "moment": "^2.22.2",
     "register-service-worker": "^1.5.2",
+    "rxjs": "^6.3.3",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
