--- a/web/webapi/package.json
+++ b/web/webapi/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@koa/cors": "^2.2.2",
     "boom": "^7.3.0",
+    "config": "^3.0.0",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11"
