--- a/web/webapi/package.json
+++ b/web/webapi/package.json
@@ -14,9 +14,12 @@
     "@koa/cors": "^2.2.3",
     "boom": "^7.3.0",
     "config": "^3.0.1",
+    "is-uuid": "^1.0.2",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "socket.io": "^2.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
