--- a/web/webui/package.json
+++ b/web/webui/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.22",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
