--- a/web/webui/package.json
+++ b/web/webui/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.24.0",
     "register-service-worker": "^1.5.2",
     "rxjs": "^6.4.0",
+    "terser": "^3.14.1",
     "vue": "^2.5.22",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
@@ -48,7 +49,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/recommended",
+      "plugin:vue/essential",
       "@vue/standard"
     ],
     "rules": {
