--- a/web/webui/.env
+++ b/web/webui/.env
@@ -1,2 +1,2 @@
-VUE_APP_API=http://localhost:3000/api2
-VUE_APP_SOCKET=http://localhost:3000
+VUE_APP_API=http://localhost:3000/
+VUE_APP_SOCKET=ws://localhost:9000/api
