--- a/web/webui/package.json
+++ b/web/webui/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
-    "axios": "^0.18.0",
     "buefy": "^0.7.2",
     "bulma": "^0.7.2",
     "lodash": "latest",
@@ -19,7 +18,7 @@
     "rxjs": "^6.4.0",
     "terser": "^3.14.1",
     "vue": "^2.5.22",
-    "vue-axios": "^2.1.4",
+    "vue-native-websocket": "^2.0.12",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.5",
     "vuex": "^3.0.1"
@@ -40,7 +39,6 @@
     "lint-staged": "^8.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
-    "socket.io": "^2.2.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
