--- a/web/webui/package.json
+++ b/web/webui/package.json
@@ -47,7 +47,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/strongly-recommended",
       "@vue/standard"
     ],
     "rules": {
